kube/prod/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tracking-api
spec:
  revisionHistoryLimit: 3
  replicas: 2
  selector:
    matchLabels:
      app: tracking-api
  template:
    metadata:
      labels:
        app: tracking-api
    spec:
      imagePullSecrets:
        - name: scw-registry-secret
      containers:
        - name: tracking-api
          image: rg.fr-par.scw.cloud/goodfood/tracking-api:latest
          ports:
            - containerPort: 8080
